--- a/bookshelf.html
+++ b/bookshelf.html
@@ -9,11 +9,18 @@
 </head>
 <body>
     <div class="bookShelf " id="bookShelf">
-
+        <div id="m"></div>
     </div>
 
 
-    <script src="./test.js"></script>
+    <a href="myFavoriteBook.html">My Fav</a>
+
+    <script src="js/master.js"></script>
+    <script  src="./js/shelf.js"></script>
+    <script  src="./js/favorite.js"></script>
+
+
+    
 
 
 </body>
