--- a/myFavoriteBook.html
+++ b/myFavoriteBook.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>myfavorites</title>
 </head>
 <body>
@@ -11,7 +12,10 @@
 
     </div>
 
+    <script src="js/master.js"></script>
+    <script  src="./js/favorite.js"></script>
+        <script  src="./js/shelf.js"></script>
 
-    <script src="./test.js"></script>
+
 </body>
 </html>
